# taxiai

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md
apps/api/: Dockerfile  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_initial_schema.py  0002_seed_districts.py  0003_add_telegram_notification_log.py  0004_seed_remaining_districts.py  0005_add_price_observations.py  0006_add_link_codes.py  0007_add_kef_observations.py
apps/api/app/: main.py
apps/api/app/core/: config.py
apps/api/app/db/: base.py  session.py
apps/api/app/jobs/: ingest_calendar.py  ingest_flights.py  ingest_opensky.py  poll_prices.py  retrain_model.py  scheduler.py
apps/api/app/ml/: features.py  inference.py  pattern_mining.py  train_demand_model.py
apps/api/app/models/: ai_analysis.py  airport.py  calendar.py  chat.py  demand.py  district.py  enums.py  finance.py  forecast.py  kef_observation.py  link_code.py  metro.py  notification.py  pattern_insight.py  pricing.py  recommendation.py  traffic.py  trip.py  user.py  weather.py
apps/api/app/providers/: base.py  factory.py
apps/api/app/schemas/: chat.py  district.py  finance.py  forecast.py  kef.py  link.py  surge.py  trip.py  user.py
apps/api/app/services/: ai_analysis_service.py  (+10 more)
apps/api/scripts/: seed_synthetic_history.py  simulate_live_feed.py
apps/api/tests/: conftest.py  test_kef_forecast.py  test_poll_prices.py  test_radar_surge.py
apps/bot/: Dockerfile  pyproject.toml
apps/bot/bot/: api_client.py  config.py  main.py  render.py  scheduler.py
apps/bot/tests/: test_render.py
(+86 files in other folders)
