[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "taxiai-api"
version = "0.1.0"
description = "TaxiAI backend — FastAPI + PostGIS + provider abstraction"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy>=2.0",
    "geoalchemy2>=0.15",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "redis>=5.1",
    "apscheduler>=3.10",
    "scikit-learn>=1.5",
    "pandas>=2.2",
    "numpy>=1.26",
    "joblib>=1.4",
    "httpx>=0.27",
    "python-jose[cryptography]>=3.3",
    "shapely>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[tool.ruff]
line-length = 100
