[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bot"]

[project]
name = "taxiai-bot"
version = "0.1.0"
description = "TaxiAI Telegram bot — thin I/O adapter over the FastAPI backend"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.13",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "pydantic-settings>=2.5",
    "redis>=5.0",  # aiogram RedisStorage backend for FSM state
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]
